--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -103,6 +103,14 @@ section {
     display: block;
 }
 
+header a {
+    padding-left: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    text-decoration: underline;
+    color: crimson;
+}
+
 body {
     line-height: 1;
 }
