--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1171,6 +1171,9 @@ html {
 
 body {
     background-image: url("images/overlay.png"), url("images/blue2.jpg");
+    background-color: #74EBD5;
+background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
+
     background-repeat: repeat, no-repeat;
     background-size: auto, 100% 100%;
     background-attachment: fixed;
